--- a/landing/app/index.html
+++ b/landing/app/index.html
@@ -7,357 +7,28 @@
     <link rel="stylesheet" href="global.css" />
   </head>
   <body>
-    <!-- Header Component -->
-    <div id="header-component">
-      <header class="header">
-        <div class="container">
-          <h1 class="logo">My Logo</h1>
-          <nav class="nav">
-            <a href="#features">Features</a>
-            <a href="#promo">Special Offer</a>
-            <a href="#cta">Get Started</a>
-          </nav>
-        </div>
-      </header>
-      <style>
-        .header {
-          background: #2c3e50;
-          color: white;
-          padding: 20px 0;
-        }
-        .header .container {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-        }
-        .logo {
-          font-size: 24px;
-          font-weight: bold;
-        }
-        .nav a {
-          color: white;
-          text-decoration: none;
-          margin-left: 20px;
-        }
-        .nav a:hover {
-          text-decoration: underline;
-        }
-        @media (max-width: 768px) {
-          .header .container {
-            flex-direction: column;
-          }
-          .nav {
-            margin-top: 20px;
-          }
-          .nav a {
-            margin: 0 10px;
-          }
-        }
-      </style>
-      <script>
-        document
-          .querySelectorAll('#header-component .nav a[href^="#"]')
-          .forEach((anchor) => {
-            anchor.addEventListener("click", function (e) {
-              e.preventDefault();
-              document.querySelector(this.getAttribute("href")).scrollIntoView({
-                behavior: "smooth",
-              });
-            });
-          });
-      </script>
-    </div>
-
-    <!-- Features Component -->
-    <div id="features-component">
-      <section id="features" class="section features">
-        <div class="container">
-          <h2>Our Amazing Features</h2>
-          <div class="features-grid">
-            <div class="feature-card">
-              <h3>Fast</h3>
-              <p>Lightning fast performance that saves you time.</p>
-            </div>
-            <div class="feature-card">
-              <h3>Simple</h3>
-              <p>Easy to use interface with no learning curve.</p>
-            </div>
-            <div class="feature-card">
-              <h3>Reliable</h3>
-              <p>99.9% uptime guaranteed for your business.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <style>
-        .features {
-          background: #f9f9f9;
-          padding: 80px 0;
-          text-align: center;
-        }
-        .features h2 {
-          font-size: 36px;
-          margin-bottom: 30px;
-        }
-        .features-grid {
-          display: grid;
-          grid-template-columns: repeat(3, 1fr);
-          gap: 30px;
-          margin-top: 50px;
-        }
-        .feature-card {
-          background: white;
-          padding: 30px;
-          border-radius: 8px;
-          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-          opacity: 0;
-          transform: translateY(20px);
-          transition: all 0.6s ease;
-        }
-        .feature-card h3 {
-          margin-bottom: 15px;
-          font-size: 22px;
-        }
-        @media (max-width: 768px) {
-          .features-grid {
-            grid-template-columns: 1fr;
-          }
-        }
-      </style>
-      <script>
-        const animateFeatures = function () {
-          const elements = document.querySelectorAll(
-            "#features-component .feature-card"
-          );
-          elements.forEach((element) => {
-            const elementPosition = element.getBoundingClientRect().top;
-            const screenPosition = window.innerHeight / 1.3;
-
-            if (elementPosition < screenPosition) {
-              element.style.opacity = "1";
-              element.style.transform = "translateY(0)";
-            }
-          });
-        };
-
-        window.addEventListener("load", animateFeatures);
-        window.addEventListener("scroll", animateFeatures);
-      </script>
-    </div>
-
-    <!-- Promo Component -->
-    <div id="promo-component">
-      <section id="promo" class="section promo">
-        <div class="container">
-          <h2>Limited Time Offer</h2>
-          <p class="promo-text">Get 50% discount if you order in:</p>
-          <div class="countdown">
-            <div class="countdown-item">
-              <span id="days">00</span>
-              <span class="countdown-label">Days</span>
-            </div>
-            <div class="countdown-item">
-              <span id="hours">00</span>
-              <span class="countdown-label">Hours</span>
-            </div>
-            <div class="countdown-item">
-              <span id="minutes">00</span>
-              <span class="countdown-label">Minutes</span>
-            </div>
-            <div class="countdown-item">
-              <span id="seconds">00</span>
-              <span class="countdown-label">Seconds</span>
-            </div>
-          </div>
-          <button class="btn promo-btn">Claim Your Discount</button>
-        </div>
-      </section>
-      <style>
-        .promo {
-          background: #bdbdbd;
-          color: white;
-          padding: 80px 0;
-          text-align: center;
-        }
-        .promo h2 {
-          font-size: 36px;
-          margin-bottom: 30px;
-        }
-        .promo-text {
-          font-size: 24px;
-          margin-bottom: 20px;
-        }
-        .countdown {
-          display: flex;
-          justify-content: center;
-          gap: 20px;
-          margin: 40px 0;
-        }
-        .countdown-item {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-        }
-        .countdown-item span:first-child {
-          font-size: 48px;
-          font-weight: bold;
-          background: rgba(255, 255, 255, 0.2);
-          padding: 10px 20px;
-          border-radius: 5px;
-          min-width: 100px;
-          display: inline-block;
-        }
-        .countdown-label {
-          font-size: 14px;
-          margin-top: 5px;
-          text-transform: uppercase;
-        }
-        .promo-btn {
-          background: #2c3e50;
-          font-size: 18px;
-          padding: 15px 40px;
-        }
-        .promo-btn:hover {
-          background: #1a252f;
-        }
-        @media (max-width: 768px) {
-          .countdown {
-            flex-wrap: wrap;
-          }
-          .countdown-item span:first-child {
-            font-size: 36px;
-            min-width: 80px;
-          }
-        }
-      </style>
-      <script>
-        const countDate = new Date();
-        countDate.setDate(countDate.getDate() + 3);
-
-        const countdown = () => {
-          const now = new Date().getTime();
-          const gap = countDate.getTime() - now;
-
-          if (gap <= 0) {
-            document.querySelector(".promo-text").innerText =
-              "The offer has ended!";
-            document.querySelector(".countdown").style.display = "none";
-            const btn = document.querySelector(".promo-btn");
-            btn.disabled = true;
-            btn.innerText = "Time's Up";
-            btn.style.opacity = "0.6";
-            return;
-          }
-
-          const second = 1000;
-          const minute = second * 60;
-          const hour = minute * 60;
-          const day = hour * 24;
-
-          const textDay = Math.floor(gap / day);
-          const textHour = Math.floor((gap % day) / hour);
-          const textMinute = Math.floor((gap % hour) / minute);
-          const textSecond = Math.floor((gap % minute) / second);
-
-          document.getElementById("days").innerText = textDay
-            .toString()
-            .padStart(2, "0");
-          document.getElementById("hours").innerText = textHour
-            .toString()
-            .padStart(2, "0");
-          document.getElementById("minutes").innerText = textMinute
-            .toString()
-            .padStart(2, "0");
-          document.getElementById("seconds").innerText = textSecond
-            .toString()
-            .padStart(2, "0");
-        };
-
-        setInterval(countdown, 1000);
-        countdown();
-
-        document
-          .querySelector("#promo-component .promo-btn")
-          .addEventListener("click", function () {
-            alert("Special offer claimed! Redirecting to checkout...");
-          });
-      </script>
-    </div>
-
-    <!-- CTA Component -->
-    <div id="cta-component">
-      <section id="cta" class="section cta">
-        <div class="container">
-          <h2>Ready to Get Started?</h2>
-          <p>Join thousands of satisfied customers today.</p>
-          <button id="cta-button" class="btn">Sign Up Now</button>
-        </div>
-      </section>
-      <style>
-        .cta {
-          background: #d3d3d3;
-          color: #000;
-          padding: 80px 0;
-          text-align: center;
-        }
-        .cta h2 {
-          font-size: 36px;
-          margin-bottom: 30px;
-        }
-        .cta p {
-          font-size: 18px;
-          margin-bottom: 30px;
-        }
-        .btn {
-          display: inline-block;
-          background: #636466;
-          color: white;
-          padding: 12px 30px;
-          border: none;
-          border-radius: 5px;
-          font-size: 16px;
-          cursor: pointer;
-          transition: background 0.3s;
-        }
-        .btn:hover {
-          background: #868688;
-        }
-      </style>
-      <script>
-        document
-          .getElementById("cta-button")
-          .addEventListener("click", function () {
-            alert(
-              "Thank you for your interest! Sign up form would appear here."
-            );
-          });
-      </script>
-    </div>
-
-    <!-- Footer Component with dynamic year -->
-    <div id="footer-component">
-      <footer class="footer">
-        <div class="container">
-          <p>
-            &copy; <span id="current-year">1970</span> My Company. All rights
-            reserved.
-          </p>
-        </div>
-      </footer>
-      <style>
-        .footer {
-          background: #2c3e50;
-          color: white;
-          padding: 20px 0;
-          text-align: center;
-        }
-      </style>
-      <script>
-        document.getElementById("current-year").textContent =
-          new Date().getFullYear();
-      </script>
-    </div>
-
+    <script src="https://unpkg.com/json5/dist/index.min.js"></script>
+    <script src="https://unpkg.com/dompurify/dist/purify.min.js"></script>
+    <script src="https://unpkg.com/hmpl-js/dist/hmpl.min.js"></script>
     <script src="global.js"></script>
+    <script>
+      const body = document.querySelector("body");
+      const template = `
+        <main>
+            <!-- Header Component -->
+            {{#request src="http://localhost:8000/api/get-header-component"}}{{/request}}
+            <!-- Features Component -->
+            {{#request src="http://localhost:8000/api/get-features-component"}}{{/request}}
+            <!-- Promo Component -->
+            {{#request src="http://localhost:8000/api/get-promo-component"}}{{/request}}
+            <!-- CTA Component -->
+            {{#request src="http://localhost:8000/api/get-cta-component"}}{{/request}}
+            <!-- Footer Component -->
+            {{#request src="http://localhost:8000/api/get-footer-component"}}{{/request}}
+        </main>
+      `;
+      const { response } = hmpl.compile(template)();
+      body.append(response);
+    </script>
   </body>
 </html>
